content visibility bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@ body {
 
 main {
   background-color: var(--white);
+  position: relative;
+  top: 80px; 
 }
 
 a {
